-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0
-
None
-
Windows 10
-
-
df27484fc0349bb060e023ac2dce246c1176d838 (qt/qtbase/5.12.1)
Enter/leave event doesn't work properly since Qt 5.12 on Windows 10:
Case 1:
- press left mouse button (e.g. on text edit when cursor shape differs from arrow),
- move mouse outside windows,
- move mouse to initial position,
Current result: we've got a leave event only and mouse cursor shape is arrow, not text cursor.
Expected result: no leave and enter event when moving mouse with button pressed.
Case 2:
- right click to open popup menu (e.g. on text edit when cursor shape differs from arrow),
Current result: we've got a leave event (sometimes not immediately) and cursor shape is changed into arrow. After closing popup we don't have an enter event, so cursor shape is arrow, not a text cursor. Since now we doesn't have any enter/leave events for window.
Expected result: enter event must come when popup is closed. Also enter/leave events must work for window after closing a popup.
- is duplicated by
-
QTBUG-72911 After closing popup menu without choosing any action, setCursor() on underlying widget has no effect
-
- Closed
-
- relates to
-
QTBUG-73267 requestActivate() doesn't work onDoubleClick
-
- Closed
-
- resulted from
-
QTBUG-60437 add full-featured Windows Ink support: generate QTabletEvents
-
- Closed
-